# CodeBaseAnalyzerTool

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  action.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture-walkthrough.html  cost_cache_architecture_overview.html  setup_run_guide.html
output/: analysis.json  analysis.schema.json  report.html
src/codebase_analyzer/: __init__.py  cache.py  chunker.py  complexity.py  config.py  exceptions.py  java_parser.py  llm_client.py  pipeline.py  repo_fetcher.py  report_generator.py  schemas.py
src/intellisource_ai/: __init__.py  cache.py  chunker.py  churn.py  complexity.py  config.py  dependency_graph.py  exceptions.py  java_parser.py  llm_client.py  logging_config.py  pipeline.py  repo_fetcher.py  report_generator.py  schemas.py  security_scanner.py
templates/: report.html.jinja2
tests/: conftest.py  test_cache.py  test_chunker.py  test_churn.py  test_complexity.py  test_config.py  test_dependency_graph.py  test_java_parser.py  test_llm_client.py  test_report_generator.py  test_security_scanner.py
