[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codebase-analyzer"
version = "1.0.0"
description = "Analyzes a Java/Spring codebase and extracts structured knowledge (overview, method signatures, complexity) using an LLM via LangChain."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# Runtime dependencies only. Dev/test/lint tooling lives in the
# "dev" optional-dependency group below so `pip install -e .` stays lean
# for anyone who just wants to run the tool.
dependencies = [
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "anthropic>=0.40.0",
    "pydantic>=2.7",
    "javalang>=0.13.0",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
# E/F: pyflakes+pycodestyle core errors, I: import sorting, UP: pyupgrade,
# B: bugbear (common footguns), SIM: simplification hints.
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
# javalang and its transitive deps ship no type stubs; ignore only that
# one third-party import rather than disabling strictness project-wide.
[[tool.mypy.overrides]]
module = "javalang.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--basetemp=.pytest_tmp"
